fixed the button tooltips

--- a/garden.html
+++ b/garden.html
@@ -14,27 +14,13 @@
 		<div id="header" class="ui-widget-header">
 			<span id="logo" class="title"> Waterbear </span>
 			<section id="toolbar" >
-				<button id="about">
-					About
-				</button>
-				<button id="restore_scripts">
-					Restore
-				</button>
-				<button id="save_scripts">
-					Save
-				</button>
-				<button id="demo_scripts">
-					Demos
-				</button>
-				<button id="clear_scripts">
-					Clear Scripts
-				</button>
-				<button id="clear_canvas">
-					Clear Stage
-				</button>
-				<button id="run_scripts">
-					Run
-				</button>
+				<button id="about">About</button>
+				<button id="restore_scripts">Restore</button>
+				<button id="save_scripts">Save</button>
+				<button id="demo_scripts">Demos</button>
+				<button id="clear_scripts">Clear Scripts</button>
+				<button id="clear_canvas">Clear Stage</button>
+				<button id="run_scripts">Run</button>
 			</section>
 		</div>
 		<div class = "content">
