Dragging in sprites
Dragging in sprites now works.

--- a/garden.html
+++ b/garden.html
@@ -33,7 +33,7 @@
 								<div id="scripttabs">
 									<ul>
 										<li>
-											<a href="#scripts_workspace">Block View</a>
+											<a href="#scripts_workspace">Stage</a>
 										</li>
 									</ul>
 									<div id="workspace" class="workspace">
