removed workspace from garden

--- a/garden.html
+++ b/garden.html
@@ -37,9 +37,7 @@
 											<a href="#script0"><span>Stage</span></a>
 										</li>
 									</ul>
-									<div id="workspace" class="workspace">
-										<div id="script0" class="scriptspace"></div>
-									</div>
+									<div id="script0" class="scriptspace"></div>
 								</div>
 							</div>
 						</div>
@@ -144,7 +142,8 @@
 			<input id="sprite_name" name="sprite_name" class ="text ui-widget-content ui-corner-all diaginput"/>
 		</div>
 
-		<script src="lib/jquery-1.7.2.min.js"></script>
+		<!--<script src="lib/jquery-1.7.2.min.js"></script>-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 		<script src="lib/jquery.ui.core.js"></script>
 		<script src="lib/jquery.ui.widget.js"></script>
 		<script src="lib/jquery.ui.position.js"></script>
